--- a/RNN_LSTM_GRU/HW_8.ipynb
+++ b/RNN_LSTM_GRU/HW_8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f56da6c1",
+   "id": "598a0890",
    "metadata": {},
    "source": [
     "# Выяснить какая архитектура больше подходит для задачи сантимент анализа на данных RNN | CNN\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "276e7b1c",
+   "id": "6717a7a2",
    "metadata": {},
    "source": [
     "****************************"
@@ -23,11 +23,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "04d28910",
+   "id": "bea642fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:02:43.112819Z",
-     "start_time": "2021-08-24T11:02:42.687804Z"
+     "end_time": "2021-08-24T13:24:39.883735Z",
+     "start_time": "2021-08-24T13:24:39.413724Z"
     }
    },
    "outputs": [],
@@ -42,11 +42,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "109f9368",
+   "id": "a12766ed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:02:46.218820Z",
-     "start_time": "2021-08-24T11:02:43.114813Z"
+     "end_time": "2021-08-24T13:24:43.099290Z",
+     "start_time": "2021-08-24T13:24:39.885725Z"
     }
    },
    "outputs": [],
@@ -61,11 +61,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "15c5c617",
+   "id": "efbadd3e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:02:46.598819Z",
-     "start_time": "2021-08-24T11:02:46.219813Z"
+     "end_time": "2021-08-24T13:24:43.478742Z",
+     "start_time": "2021-08-24T13:24:43.100724Z"
     }
    },
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6e68b77",
+   "id": "b4217614",
    "metadata": {},
    "source": [
     "***************"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9b70569",
+   "id": "dfabc4b4",
    "metadata": {},
    "source": [
     "## Preprocessing"
@@ -100,11 +100,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7525c2b6",
+   "id": "07d16096",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:02:47.216811Z",
-     "start_time": "2021-08-24T11:02:46.599801Z"
+     "end_time": "2021-08-24T13:24:44.078722Z",
+     "start_time": "2021-08-24T13:24:43.479723Z"
     }
    },
    "outputs": [
@@ -171,11 +171,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1e214b9b",
+   "id": "ed7fe242",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:02:48.034820Z",
-     "start_time": "2021-08-24T11:02:47.217813Z"
+     "end_time": "2021-08-24T13:24:44.886742Z",
+     "start_time": "2021-08-24T13:24:44.079723Z"
     }
    },
    "outputs": [],
@@ -184,12 +184,11 @@
     "exclude = set(punctuation)\n",
     "morpher = MorphAnalyzer()\n",
     "\n",
-    "\n",
     "def preprocess_text(txt, exclude=exclude, sw=sw, morpher=morpher):\n",
     "    txt = str(txt)\n",
-    "#     txt = re.sub(\"@[\\w]*\", \"\", txt)\n",
     "    txt = \"\".join(c for c in txt if c not in exclude)\n",
     "    txt = txt.lower()\n",
+    "    txt = re.sub(\"\\sне\", \"не\", txt)\n",
     "    txt = [morpher.parse(\n",
     "        word)[0].normal_form for word in txt.split() if word not in sw]\n",
     "    return \" \".join(txt)"
@@ -198,11 +197,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "11a96214",
+   "id": "e208d3be",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:31.402870Z",
-     "start_time": "2021-08-24T11:02:48.035812Z"
+     "end_time": "2021-08-24T13:29:51.818813Z",
+     "start_time": "2021-08-24T13:24:44.887725Z"
     }
    },
    "outputs": [],
@@ -214,11 +213,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "99edc24b",
+   "id": "2e0714eb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:31.418854Z",
-     "start_time": "2021-08-24T11:07:31.404863Z"
+     "end_time": "2021-08-24T13:29:51.834795Z",
+     "start_time": "2021-08-24T13:29:51.820791Z"
     }
    },
    "outputs": [
@@ -252,7 +251,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>alisachachka не уезжаааааааать ❤ не хотеть уез...</td>\n",
+       "      <td>alisachachkaич уезжаааааааать ❤ тожена хотеть ...</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -267,7 +266,7 @@
       ],
       "text/plain": [
        "   id                                               text  class\n",
-       "0   0  alisachachka не уезжаааааааать ❤ не хотеть уез...      0\n",
+       "0   0  alisachachkaич уезжаааааааать ❤ тожена хотеть ...      0\n",
        "1   1  rt galyginvadim ребята девчата кино любовь зав...      1"
       ]
      },
@@ -283,11 +282,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "15e6393a",
+   "id": "9eea7f42",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:31.433851Z",
-     "start_time": "2021-08-24T11:07:31.423856Z"
+     "end_time": "2021-08-24T13:29:51.849805Z",
+     "start_time": "2021-08-24T13:29:51.836792Z"
     }
    },
    "outputs": [],
@@ -301,11 +300,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6442d401",
+   "id": "8ae960eb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:39.124871Z",
-     "start_time": "2021-08-24T11:07:31.435850Z"
+     "end_time": "2021-08-24T13:29:59.983811Z",
+     "start_time": "2021-08-24T13:29:51.850792Z"
     }
    },
    "outputs": [],
@@ -328,11 +327,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b7c7b696",
+   "id": "997c2d01",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:39.140852Z",
-     "start_time": "2021-08-24T11:07:39.125862Z"
+     "end_time": "2021-08-24T13:29:59.999805Z",
+     "start_time": "2021-08-24T13:29:59.984794Z"
     }
    },
    "outputs": [],
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb334d24",
+   "id": "9cdcdaf9",
    "metadata": {},
    "source": [
     "## CNN"
@@ -354,11 +353,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e47f66dc",
+   "id": "844c80b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:40.070787Z",
-     "start_time": "2021-08-24T11:07:39.142852Z"
+     "end_time": "2021-08-24T13:30:00.957813Z",
+     "start_time": "2021-08-24T13:30:00.001794Z"
     }
    },
    "outputs": [],
@@ -371,7 +370,7 @@
     "              trainable=True,\n",
     "              mask_zero=True))\n",
     "model1.add(Masking(mask_value=0.0))\n",
-    "model1.add(Conv1D(64, 3))\n",
+    "model1.add(Conv1D(64, 2))\n",
     "model1.add(Activation(\"relu\"))\n",
     "model1.add(Flatten())\n",
     "model1.add(Dense(128))\n",
@@ -384,11 +383,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a338a74c",
+   "id": "4eb89480",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:56.694746Z",
-     "start_time": "2021-08-24T11:07:40.071777Z"
+     "end_time": "2021-08-24T13:30:17.170813Z",
+     "start_time": "2021-08-24T13:30:00.958792Z"
     },
     "scrolled": true
    },
@@ -408,11 +407,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4a4ef3bb",
+   "id": "4a3b2715",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:56.950288Z",
-     "start_time": "2021-08-24T11:07:56.696270Z"
+     "end_time": "2021-08-24T13:30:17.421804Z",
+     "start_time": "2021-08-24T13:30:17.171791Z"
     }
    },
    "outputs": [
@@ -420,11 +419,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45/45 [==============================] - 0s 4ms/step - loss: 0.5828 - accuracy: 0.7348\n",
+      "45/45 [==============================] - 0s 4ms/step - loss: 0.5840 - accuracy: 0.7342\n",
       "\n",
       "\n",
-      "CNN Test loss: 0.5827595591545105\n",
-      "CNN Test accuracy: 0.73482346534729\n"
+      "CNN Test loss: 0.584024965763092\n",
+      "CNN Test accuracy: 0.7341621518135071\n"
      ]
     }
    ],
@@ -437,7 +436,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a5d4ba6",
+   "id": "54387841",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-24T09:29:19.885498Z",
@@ -451,11 +450,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "218c14a2",
+   "id": "ef7b9618",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:07:57.092314Z",
-     "start_time": "2021-08-24T11:07:56.952268Z"
+     "end_time": "2021-08-24T13:30:17.565811Z",
+     "start_time": "2021-08-24T13:30:17.422792Z"
     }
    },
    "outputs": [
@@ -486,11 +485,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ef1082c0",
+   "id": "988f54af",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:11:16.652330Z",
-     "start_time": "2021-08-24T11:07:57.093309Z"
+     "end_time": "2021-08-24T13:33:10.870812Z",
+     "start_time": "2021-08-24T13:30:17.566791Z"
     }
    },
    "outputs": [],
@@ -509,11 +508,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "eece4ea9",
+   "id": "e6bf50a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:11:18.180330Z",
-     "start_time": "2021-08-24T11:11:16.653309Z"
+     "end_time": "2021-08-24T13:33:12.715804Z",
+     "start_time": "2021-08-24T13:33:10.871791Z"
     }
    },
    "outputs": [
@@ -521,11 +520,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45/45 [==============================] - 1s 32ms/step - loss: 0.5760 - accuracy: 0.7410\n",
+      "45/45 [==============================] - 2s 40ms/step - loss: 0.5612 - accuracy: 0.7441\n",
       "\n",
       "\n",
-      "LSTM Test loss: 0.5759655237197876\n",
-      "LSTM Test accuracy: 0.7409513592720032\n"
+      "LSTM Test loss: 0.561244010925293\n",
+      "LSTM Test accuracy: 0.7441255450248718\n"
      ]
     }
    ],
@@ -538,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27539675",
+   "id": "042b955b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-24T09:41:44.858987Z",
@@ -552,11 +551,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "8d188d66",
+   "id": "ee953708",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:11:18.324328Z",
-     "start_time": "2021-08-24T11:11:18.181310Z"
+     "end_time": "2021-08-24T13:33:12.854875Z",
+     "start_time": "2021-08-24T13:33:12.716792Z"
     }
    },
    "outputs": [
@@ -579,7 +578,7 @@
     "              mask_zero=True))\n",
     "model3.add(Masking(mask_value=0.0))\n",
     "model3.add(LSTM(64, recurrent_dropout=0.25, return_sequences=True))\n",
-    "model3.add(Conv1D(64, 3))\n",
+    "model3.add(Conv1D(64, 2))\n",
     "model3.add(Flatten())\n",
     "model3.add(Dense(128, activation='relu'))\n",
     "model3.add(Dropout(0.25))\n",
@@ -589,11 +588,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "368c15f7",
+   "id": "20c6c57f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:13:41.637329Z",
-     "start_time": "2021-08-24T11:11:18.325308Z"
+     "end_time": "2021-08-24T13:35:36.817812Z",
+     "start_time": "2021-08-24T13:33:12.855792Z"
     }
    },
    "outputs": [],
@@ -612,11 +611,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c8581591",
+   "id": "1c3ff003",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:13:43.316330Z",
-     "start_time": "2021-08-24T11:13:41.638308Z"
+     "end_time": "2021-08-24T13:35:38.253259Z",
+     "start_time": "2021-08-24T13:35:36.818792Z"
     }
    },
    "outputs": [
@@ -624,11 +623,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45/45 [==============================] - 2s 35ms/step - loss: 0.6593 - accuracy: 0.7271\n",
+      "45/45 [==============================] - 1s 30ms/step - loss: 0.6788 - accuracy: 0.7260\n",
       "\n",
       "\n",
-      "LSTM+CNN Test loss: 0.6593348979949951\n",
-      "LSTM+CNN Test accuracy: 0.727064311504364\n"
+      "LSTM+CNN Test loss: 0.6788244843482971\n",
+      "LSTM+CNN Test accuracy: 0.7259621620178223\n"
      ]
     }
    ],
@@ -641,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ce1e9c6",
+   "id": "cb6cce9f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-24T10:12:50.432747Z",
@@ -655,11 +654,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b4db666d",
+   "id": "e814984f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:13:43.444308Z",
-     "start_time": "2021-08-24T11:13:43.317309Z"
+     "end_time": "2021-08-24T13:35:38.394295Z",
+     "start_time": "2021-08-24T13:35:38.254276Z"
     }
    },
    "outputs": [
@@ -681,7 +680,7 @@
     "              trainable=True,\n",
     "              mask_zero=True))\n",
     "model4.add(Masking(mask_value=0.0))\n",
-    "model4.add(Conv1D(64, 3))\n",
+    "model4.add(Conv1D(64, 2))\n",
     "model4.add(Activation(\"relu\"))\n",
     "model4.add(LSTM(64, recurrent_dropout=0.25))\n",
     "model4.add(Dense(128, activation='relu'))\n",
@@ -692,11 +691,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "33573c75",
+   "id": "40b62167",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:15:34.224329Z",
-     "start_time": "2021-08-24T11:13:43.445310Z"
+     "end_time": "2021-08-24T13:37:33.475288Z",
+     "start_time": "2021-08-24T13:35:38.396277Z"
     }
    },
    "outputs": [],
@@ -715,11 +714,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "efc07bf1",
+   "id": "6569fc0e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-24T11:15:35.404329Z",
-     "start_time": "2021-08-24T11:15:34.227309Z"
+     "end_time": "2021-08-24T13:37:35.091276Z",
+     "start_time": "2021-08-24T13:37:33.478276Z"
     }
    },
    "outputs": [
@@ -727,11 +726,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "45/45 [==============================] - 1s 25ms/step - loss: 0.6612 - accuracy: 0.7293\n",
+      "45/45 [==============================] - 2s 34ms/step - loss: 0.6801 - accuracy: 0.7263\n",
       "\n",
       "\n",
-      "CNN+LSTM Test loss: 0.661159098148346\n",
-      "CNN+LSTM Test accuracy: 0.7292686104774475\n"
+      "CNN+LSTM Test loss: 0.680104672908783\n",
+      "CNN+LSTM Test accuracy: 0.7262707948684692\n"
      ]
     }
    ],
@@ -744,10 +743,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9208794",
+   "id": "902921ed",
    "metadata": {},
    "source": [
-    "**Вывод:** В базовых исполнениях All about the same."
+    "**Вывод:** В базовых исполнениях все варианты All about the same. LSTM показало точность выше, но явного преимущества на данном датасете нет."
    ]
   }
  ],
